hphp/test/zend/good/error_008.php
<?php

trait abc { }

class foo implements abc { }

?>