hphp/test/zend/bad/bug30519.php
<?php
class test implements a {
}
?>